Se mejora el diseño de la vista, se agregan iconos  a través de ionicons y tipo de fuente Roboto a través de Google Fonts, se actualzia archivo Readme con imágenes

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GCA CONTROL DE MAQUINAS</title>
+    <title>AGENDA</title>
     <meta charset="utf-8">
 	<link href="style.css" rel="stylesheet" />
 <style> 
@@ -12,7 +12,11 @@
 </style>
 </head>
 <body>
-	<div class="padre" id="containerData"></div>
+	<div class="padre">
+		<div class="hijo">
+			<div id="containerData"></div>
+		</div>
+	</div>
 
 
  	<script src="app.js"></script>
